==> hletrd/ESP32_ToF/VL53L0X.cpp <==
#include "VL53L0X.h"
#include "SoftWire.h"
#include "SlowSoftI2CMaster.h"
#define ADDRESS_DEFAULT 0b0101001
#define startTimeout() (timeout_start_ms = millis())
#define checkTimeoutExpired() (io_timeout > 0 && ((uint16_t)millis() - timeout_start_ms) > io_timeout)
#define decodeVcselPeriod(reg_val)      (((reg_val) + 1) << 1)
#define encodeVcselPeriod(period_pclks) (((period_pclks) >> 1) - 1)
#define calcMacroPeriod(vcsel_period_pclks) ((((uint32_t)2304 * (vcsel_period_pclks) * 1655) + 500) / 1000)

void VL53L0X::writeReg(uint8_t reg, uint8_t value) {
  Wire.beginTransmission(address);
  Wire.write(reg);
  Wire.write(value);
  last_status = Wire.endTransmission();
}

void VL53L0X::writeReg16Bit(uint8_t reg, uint16_t value) {
  Wire.beginTransmission(address);
  Wire.write(reg);
  Wire.write((value >> 8) & 0xFF);
  Wire.write(value & 0xFF);
  last_status = Wire.endTransmission();
}

void VL53L0X::writeReg32Bit(uint8_t reg, uint32_t value) {
  Wire.beginTransmission(address);
  Wire.write(reg);
  Wire.write((value >> 24) & 0xFF);
  Wire.write((value >> 16) & 0xFF);
  Wire.write((value >> 8) & 0xFF);
  Wire.write(value & 0xFF);
  last_status = Wire.endTransmission();
}

uint8_t VL53L0X::readReg(uint8_t reg) {
  uint8_t value;

  Wire.beginTransmission(address);
  Wire.write(reg);
  last_status = Wire.endTransmission();

  Wire.requestFrom(address, (uint8_t) 1);
  value = Wire.read();

  return value;
}

uint16_t VL53L0X::readReg16Bit(uint8_t reg) {
  uint16_t value;

  Wire.beginTransmission(address);
  Wire.write(reg);
  last_status = Wire.endTransmission();

  Wire.requestFrom(address, (uint8_t) 2);
  value = (uint16_t) Wire.read() << 8;
  value |= Wire.read();

  return value;
}

uint32_t VL53L0X::readReg32Bit(uint8_t reg) {
  uint32_t value;

  Wire.beginTransmission(address);
  Wire.write(reg);
  last_status = Wire.endTransmission();

  Wire.requestFrom(address, (uint8_t) 4);
  value = (uint32_t) Wire.read() << 24;
  value |= (uint32_t) Wire.read() << 16;
  value |= (uint16_t) Wire.read() << 8;
  value |= Wire.read();

  return value;
}

void VL53L0X::writeMulti(uint8_t reg, uint8_t
  const * src, uint8_t count) {
  Wire.beginTransmission(address);
  Wire.write(reg);

  while (count--> 0) {
    Wire.write( * (src++));
  }

  last_status = Wire.endTransmission();
}

void VL53L0X::readMulti(uint8_t reg, uint8_t * dst, uint8_t count) {
  Wire.beginTransmission(address);
  Wire.write(reg);
  last_status = Wire.endTransmission();

  Wire.requestFrom(address, count);

  while (count--> 0) {
    *(dst++) = Wire.read();
  }
}
