==> leobeo-png/Luminas/stm32/try1/Core/Src/vl53l0x_stm32.c <==
#include "vl53l0x_stm32.h"
#include <stdbool.h>
#define ADDRESS_DEFAULT 0b0101001
#define startTimeout() (timeout_start_ms = millis())
#define checkTimeoutExpired() (io_timeout > 0 && ((uint16_t)millis() - timeout_start_ms) > io_timeout)
#define decodeVcselPeriod(reg_val) (((reg_val) + 1) << 1)
#define encodeVcselPeriod(period_pclks) (((period_pclks) >> 1) - 1)
#define calcMacroPeriod(vcsel_period_pclks) ((((uint32_t)2304 * (vcsel_period_pclks) * 1655) + 500) / 1000)

void writeReg(uint8_t reg, uint8_t value)
{
    uint8_t data[2];
    data[0] = reg;
    data[1] = value;
    HAL_I2C_Master_Transmit(&hi2c2, address << 1, data, 2, HAL_MAX_DELAY);
}

void writeReg16Bit(uint8_t reg, uint16_t value)
{
    uint8_t data[3];
    data[0] = reg;
    data[1] = (value >> 8) & 0xFF;
    data[2] = value & 0xFF;
    HAL_I2C_Master_Transmit(&hi2c2, address << 1, data, 3, HAL_MAX_DELAY);
}

void writeReg32Bit(uint8_t reg, uint32_t value){
    uint8_t data[5];
    data[0] = reg;
    data[1] = (value >> 24) & 0xFF;
    data[2] = (value >> 16) & 0xFF;
    data[3] = (value >> 8) & 0xFF;
    data[4] = value & 0xFF;
    HAL_I2C_Master_Transmit(&hi2c2, address << 1, data, 5, HAL_MAX_DELAY);
}

uint8_t readReg(uint8_t reg)
{
    uint8_t value;
    HAL_I2C_Master_Transmit(&hi2c2, address << 1, &reg, 1, HAL_MAX_DELAY);
    HAL_I2C_Master_Receive(&hi2c2, address << 1, &value, 1, HAL_MAX_DELAY);
    return value;
}

uint16_t readReg16Bit(uint8_t reg)
{
    uint8_t data[2];
    HAL_I2C_Master_Transmit(&hi2c2, address << 1, &reg, 1, HAL_MAX_DELAY);
    HAL_I2C_Master_Receive(&hi2c2, address << 1, data, 2, HAL_MAX_DELAY);
    return ((uint16_t)data[0] << 8) | data[1];
}

uint32_t readReg32Bit(uint8_t reg)
{
    uint8_t data[4];
    HAL_I2C_Master_Transmit(&hi2c2, address << 1, &reg, 1, HAL_MAX_DELAY);
    HAL_I2C_Master_Receive(&hi2c2, address << 1, data, 4, HAL_MAX_DELAY);
    return ((uint32_t)data[0] << 24) | ((uint32_t)data[1] << 16) |
           ((uint16_t)data[2] << 8) | data[3];
}

void writeMulti(uint8_t reg, uint8_t const * src, uint8_t count)
{
    uint8_t data[count + 1];
    data[0] = reg;
    for(uint8_t i = 0; i < count; i++)
    {
        data[i + 1] = src[i];
    }
    HAL_I2C_Master_Transmit(&hi2c2, address << 1, data, count + 1, HAL_MAX_DELAY);
}

void readMulti(uint8_t reg, uint8_t * dst, uint8_t count)
{
    HAL_I2C_Master_Transmit(&hi2c2, address << 1, &reg, 1, HAL_MAX_DELAY);
    HAL_I2C_Master_Receive(&hi2c2, address << 1, dst, count, HAL_MAX_DELAY);
}
